<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.oracle</groupId>
    <artifactId>connectme</artifactId>
    <version>1.0.0</version>
    <name>Connect Me</name>
    <description>Application to demo connectivity to an Oracle database.</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.8.1</junit.version>
        <javafx.version>22</javafx.version>
        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.plugin.validation>brief</maven.plugin.validation>
        <native.maven.plugin.version>0.10.1</native.maven.plugin.version>
        <mainClass>com.oracle.connect.Main</mainClass>
        <imageName>connectme</imageName>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ojdbc11</artifactId>
            <version>23.3.0.23.09</version>
        </dependency>
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ucp</artifactId>
            <version>23.3.0.23.09</version>
        </dependency>
        <!-- JavaFX -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.dlsc.formsfx</groupId>
            <artifactId>formsfx-core</artifactId>
            <version>11.6.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.kordamp.bootstrapfx</groupId>
            <artifactId>bootstrapfx-core</artifactId>
            <version>0.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.fxmisc.flowless</groupId>
            <artifactId>flowless</artifactId>
            <version>0.7.2</version>
        </dependency>
        <dependency>
            <groupId>org.fxmisc.wellbehaved</groupId>
            <artifactId>wellbehavedfx</artifactId>
            <version>0.3.3</version>
        </dependency>
        <dependency>
            <groupId>org.fxmisc.undo</groupId>
            <artifactId>undofx</artifactId>
            <version>2.1.1</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native.maven.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                            <execution>
                                <id>test-native</id>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <phase>test</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <skip>false</skip>
                            <imageName>${imageName}</imageName>
                            <mainClass>${mainClass}</mainClass>
                            <fallback>false</fallback>
                            <agent>
                                <enabled>true</enabled>
                            </agent>
                            <buildArgs>
                                -Ob
                                -march=native
                                --initialize-at-build-time=com.oracle.connect.Main
                            </buildArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <!-- required for detecting platform settings -->
        <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>LATEST</version>
            </extension>
        </extensions>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.source}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>${mainClass}</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>${mainClass}</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>java-agent</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <workingDirectory>${project.build.directory}</workingDirectory>
                            <arguments>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>${mainClass}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>native</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${project.build.directory}/${imageName}</executable>
                            <workingDirectory>${project.build.directory}</workingDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>1.0.22</version>
                <configuration>
                    <mainClass>${mainClass}</mainClass>
                    <verbose>true</verbose>

                    <javaStaticSdkVersion>22+36.1</javaStaticSdkVersion>
                    <javafxStaticSdkVersion>22</javafxStaticSdkVersion>

                    <runtimeArgs>
                        <arg>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.desktop/sun.awt.image=com.oracle.connect</arg>
                        <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control=com.oracle.connect</arg>
                        <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.tk=com.oracle.connect</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</arg>
                        <arg>-Djava.home=.</arg>
                        <arg>-Dprism.verbose=true</arg>
                        <arg>-Dprism.supershader=false</arg>
                        <arg>-Dprism.allowhidpi=false</arg>
                        <arg>-Djavafx.animation.fullspeed=true</arg>
                        <arg>-Dprism.vpipe=false</arg>
                        <arg>-Dprism.debug=false</arg>
                        <arg>-Djavafx.animation.pulse=60</arg>
                        <arg>-Dprism.vsync=false</arg>
                        <arg>-Xmx4G</arg>
                        <arg>-Xms2G</arg>
                    </runtimeArgs>


                    <nativeImageArgs>
                        <!-- arg>-H:TempDirectory=C:/dev/projects/connectme/tmp</arg -->
                        <arg>-Ob</arg>
                        <arg>-Djava.awt.headless=true</arg>
                        <arg>--allow-incomplete-classpath</arg>
                        <arg>--no-fallback</arg>
                        <arg>-H:+ReportUnsupportedElementsAtRuntime</arg>
                    </nativeImageArgs>

                    <reflectionList>
                        <list>com.oracle.connect.gui.Controller</list>
                    </reflectionList>

                    <linkerArgs>
                        <!-- arg>awt.lib</arg -->
                        <arg>fontmanager.lib</arg>
                        <arg>freetype.lib</arg>
                        <arg>gdi32.lib</arg>
                        <arg>ole32.lib</arg>

                        <arg>jawt.lib</arg>
                        <arg>javaaccessbridge.lib</arg>
                        <arg>management_ext.lib</arg>
                        <arg>psapi.lib</arg>
                        <arg>msvcrt.lib</arg>
                        <arg>advapi32.lib</arg>
                        <arg>iphlpapi.lib</arg>
                        <arg>secur32.lib</arg>
                        <arg>userenv.lib</arg>
                        <arg>version.lib</arg>
                        <arg>ws2_32.lib</arg>
                        <arg>winhttp.lib</arg>
                        <arg>ncrypt.lib</arg>
                        <arg>crypt32.lib</arg>
                        <arg>j2pkcs11.lib</arg>
                        <arg>java.lib</arg>
                        <arg>net.lib</arg>
                        <arg>nio.lib</arg>
                        <arg>prefs.lib</arg>
                        <arg>zip.lib</arg>
                        <arg>sunmscapi.lib</arg>

                        <!-- required for the shim dlls -->
                        <!-- https://github.com/oracle/graal/issues/4072#issuecomment-1025211534 -->
                        <!-- https://github.com/oracle/graal/blob/vm-ce-22.3.0/substratevm/src/com.oracle.svm.hosted/src/com/oracle/svm/hosted/jdk/JNIRegistrationAWTSupport.java#L45-L66 -->
                        <arg>/export:JDK_LoadSystemLibrary</arg>
                        <arg>/export:JNU_CallMethodByName</arg>
                        <arg>/export:JNU_CallMethodByNameV</arg>
                        <arg>/export:JNU_CallStaticMethodByName</arg>
                        <arg>/export:JNU_ClassString</arg>
                        <arg>/export:JNU_GetEnv</arg>
                        <arg>/export:JNU_GetFieldByName</arg>
                        <arg>/export:JNU_GetStaticFieldByName</arg>
                        <arg>/export:JNU_IsInstanceOfByName</arg>
                        <arg>/export:JNU_NewObjectByName</arg>
                        <arg>/export:JNU_NewStringPlatform</arg>
                        <arg>/export:JNU_SetFieldByName</arg>
                        <arg>/export:JNU_ThrowArrayIndexOutOfBoundsException</arg>
                        <arg>/export:JNU_ThrowByName</arg>
                        <arg>/export:JNU_ThrowIOException</arg>
                        <arg>/export:JNU_ThrowIllegalArgumentException</arg>
                        <arg>/export:JNU_ThrowInternalError</arg>
                        <arg>/export:JNU_ThrowNullPointerException</arg>
                        <arg>/export:JNU_ThrowOutOfMemoryError</arg>
                        <arg>/export:getEncodingFromLangID</arg>
                        <arg>/export:getJavaIDFromLangID</arg>
                        <arg>shell32.lib</arg>
                    </linkerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>